--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -510,7 +510,8 @@ textarea {
 # Navigation
 --------------------------------------------------------------*/
 .mobile-nav-wrapper {
-  height: 46px; }
+  height: 46px;
+  z-index: 99; }
   .mobile-nav-wrapper .main-navigation {
     height: auto;
     padding: 10px;
@@ -628,7 +629,7 @@ textarea {
     width: 100%;
     background: white;
     border-bottom: solid 1px rgba(0, 0, 0, 0.2);
-    z-index: 1; }
+    z-index: 99; }
   .desktop-nav-wrapper .main-navigation {
     max-width: 1000px;
     -ms-flex-pack: center;
@@ -1980,7 +1981,23 @@ strong {
     width: 80%;
     height: auto;
     margin: 0 auto;
-    border: solid 1px #444444; }
+    border: solid 1px #444444;
+    position: relative; }
+    .book-section2 .ribbon {
+      display: unset;
+      position: absolute;
+      top: 35px;
+      left: -45px;
+      z-index: 1; }
+    .book-section2 .ribbon-heading {
+      display: unset;
+      position: absolute;
+      top: 23px;
+      left: 23px;
+      font-weight: 500;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      z-index: 2; }
   .main-carousel .carousel-cell {
     width: 100%;
     /* full width */
