--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -240,11 +240,48 @@
 
   .book-section1{
     background: none;
-    padding: 0px 0;  
+    padding: 0px 0; 
+    max-width: 80vw; 
+    margin: 0 auto;
   }
-
   .book-section1-inside{
     background-color:#fff;
+    display: block;
+    width: 100%;
+  }
+  .bix-carousel-info{
+    p{
+      max-width: 500px;
+    }
+  }
+  .main-carousel{
+    .bix-carousel-img-1{
+      background: 
+        linear-gradient(
+        rgba(255, 255, 255, 0.1), 
+        rgba(255, 255, 255, 0.1)
+      ), 
+      url(../../images/bix-book-1.png) no-repeat 20% top;
+    }
+    .bix-carousel-img-2{
+      background: 
+        linear-gradient(
+        rgba(255, 255, 255, 0.1), 
+        rgba(255, 255, 255, 0.1)
+      ), 
+      url(../../images/bix-book-2.png) no-repeat 20% top;
+    }
+    .bix-carousel-img-3{
+      background: 
+        linear-gradient(
+        rgba(255, 255, 255, 0.1), 
+        rgba(255, 255, 255, 0.1)
+      ), 
+      url(../../images/bix-book-3.png) no-repeat 20% top;
+    }
+  }
+  .book-purchase{
+    max-width: 80vw; 
   }
 }
 
@@ -280,6 +317,7 @@
     margin: 0 auto;
     border: solid 1px $color__gray;
     position: relative;
+    margin-top: 50px;
     .ribbon{
       display: unset;
       position: absolute;
@@ -297,6 +335,10 @@
       text-transform: uppercase;
       z-index: 2;
     }
+  }
+
+  .book-title-wrapper-2{
+    display: none;
   }
   .main-carousel{
     .carousel-cell{
@@ -352,6 +394,16 @@
     .flickity-prev-next-button {
       display: none;
     }
+  }
+  .book-section3{
+    max-width: 100vw; 
+  }
+  .book-purchase{
+    border: solid 1px $color__gray;
+    width: 80%;
+    margin: 50px auto;
+    padding-top: 50px;
+    position: relative;
   }
 }
 
