--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -112,7 +112,7 @@
     }
     li:before {   
             content: "";  
-            border-color: transparent $color__orange;  
+            border-color: transparent $color__gray;  
             border-style: solid;  
             border-width: 0.35em 0 0.35em 0.45em;  
             display: block;  
@@ -403,6 +403,7 @@
       li{
         font-size: 1.3rem;
         line-height: 25px;
+        text-align: left;
       }
       li:before{
         top:1em;
