fix navbar, uncommented element "i" in navigation.scss

--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -182,10 +182,10 @@
 		align-items: center;
 		justify-content: center;
 
-	/*	i {
+		i {
 			position: absolute;
 			top: 0;
-		} */
+		} 
 	}
 
 	i.fa-bars {
