add style for entry-header on single story

--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -7,15 +7,40 @@
 	.entry-header {
 		height: 100vh;
 		background: rgba(0,0,0,0.5);
-	}
+		position: relative;
+		font-family: $font__header;
+		text-transform: uppercase;
 
-	.img-container {
-		overflow: hidden;
-		img {
-			width: auto;
-			max-width: none;
-			height: 100%;
+
+
+		h2 {
+			font-size: 21px;
+			position: absolute;
+			top: 2vh;
+			left: 5vw;
+			font-weight: 400;
+		}
+
+		h1 {
+			text-align: center;
+			font-size: 21px;
+			position: absolute;
+			top: 70vh;
+			font-weight: 400;
+			background: rgba(255,255,255,0.8);
+		}
+
+		.img-container {
+			overflow: hidden;
+
+			img {
+				width: auto;
+				max-width: none;
+				height: 100%;
+			}
 		}
 	}
+
+	
 
 }
