stories page mobile styling

--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -68,6 +68,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "about";
 @import "front-page";
 @import "bix-book";
+@import "stories";
 @import "footer";
 @import "media-queries";
 @import "front-sections/front-model";
