--- a/themes/bix/sass/_stories.scss
+++ b/themes/bix/sass/_stories.scss
@@ -4,10 +4,18 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	max-width: 100%;
 	.site-logo{
 		display: none;
 	}	
-
+	.stories-header{
+		width: 80%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+	}
 	.stories-title{
 	  width: 100%;
 	  color:$color__orange;
@@ -20,6 +28,11 @@
 	  text-align: center;
 	  text-transform: uppercase;
 	  font-weight: 500;
+	  margin-bottom: 0;
+	  margin-top: 20px;
+	}
+	.stories-subtitle{
+		font-weight: 300;
 	}
 }
 
@@ -32,10 +45,24 @@
 	overflow: hidden;
 	margin-bottom: 0;
 	.featured-img{
-		background-size: contain;
+		background-size: cover;
 		background-position: center center;
 		height: 650px;
+		position: relative;
+		overflow: hidden;
 	}	
+	.stories-ribbon{
+		position: absolute;
+		top: 50px;
+		left: -45px;
+
+	}
+	.story-number{
+		position: absolute;
+		top: 46px;
+		left: 50px;
+		text-transform: uppercase;
+	}
 	.entry-content{
 		position: absolute;
 		padding: 0 40px;
@@ -73,7 +100,7 @@
 		color: #fff;
 		font-weight: 500;
 		}
-	}
+	}	
 }
 
 
