--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -1,7 +1,6 @@
 /*--------------------------------------------------------------
 # Single Story
 --------------------------------------------------------------*/
-
 .single-story-container{
 
 	.entry-header {
@@ -26,13 +25,11 @@
 			top: 70vh;
 			font-weight: 400;
 			background: rgba(255,255,255,0.8);
-			.highlight {
-				color: $color__orange;
-			}
 		}
 
 		.img-container {
 			overflow: hidden;
+			height: 100%;
 
 			img {
 				width: auto;
@@ -57,6 +54,9 @@
 			font-weight: 400;
 			color: $color__orange;
 			padding: 0 10vw;
+			&::last-word {
+				font-weight: bold;
+			}
 		}
 		p {
 			margin: 5vw 10vw;
