--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -2,6 +2,7 @@
 # Single Story
 --------------------------------------------------------------*/
 .single-story-container{
+	min-width: 320px;
 
 	.entry-header {
 		height: 100vh;
@@ -18,7 +19,8 @@
 			font-weight: 400;
 		}
 
-		h1 {
+		h1.entry-title {
+			width: 100%;
 			text-align: center;
 			font-size: 21px;
 			position: absolute;
@@ -30,11 +32,13 @@
 		.img-container {
 			overflow: hidden;
 			height: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 
 			img {
-				width: auto;
+				min-height: 100%;
 				max-width: none;
-				height: 100%;
 			}
 		}
 	}
@@ -44,7 +48,7 @@
 		justify-content: center;
 		align-items: center;
 		flex-flow: column nowrap;
-		h2 {
+		h2.story-number {
 			border: solid 2px $color__orange;
 			border-width: 2px 0;
 			text-align: center;
@@ -54,13 +58,30 @@
 			font-weight: 400;
 			color: $color__orange;
 			padding: 0 10vw;
-			&::last-word {
-				font-weight: bold;
-			}
 		}
-		p {
+		p{
 			margin: 5vw 10vw;
 			font-weight: 300;
+		}
+		.practice-block {
+			font-size: 1.5rem;
+			text-transform: uppercase;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-flow: column nowrap;
+
+			h2.practice-title{
+				border: solid 2px $color__orange;
+				border-width: 2px 0;
+				text-align: center;
+				font-family: $font__header;
+				text-transform: uppercase;
+				font-size: 21px;
+				font-weight: 400;
+				color: $color__orange;
+				padding: 0 10vw;
+			}
 		}
 	}
 
