--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1748,57 +1748,83 @@ strong {
 /*--------------------------------------------------------------
 # Single Story
 --------------------------------------------------------------*/
-.single-story-container .entry-header {
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
-  position: relative;
-  font-family: "Titillium Web", sans-serif;
-  text-transform: uppercase; }
-  .single-story-container .entry-header h2 {
-    font-size: 21px;
-    position: absolute;
-    top: 2vh;
-    left: 5vw;
-    font-weight: 400; }
-  .single-story-container .entry-header h1 {
-    text-align: center;
-    font-size: 21px;
-    position: absolute;
-    top: 70vh;
-    font-weight: 400;
-    background: rgba(255, 255, 255, 0.8); }
-  .single-story-container .entry-header .img-container {
-    overflow: hidden;
-    height: 100%; }
-    .single-story-container .entry-header .img-container img {
-      width: auto;
-      max-width: none;
-      height: 100%; }
-
-.single-story-container .story-content {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
-  -ms-flex-flow: column nowrap;
-      flex-flow: column nowrap; }
-  .single-story-container .story-content h2 {
-    border: solid 2px #F9AC31;
-    border-width: 2px 0;
-    text-align: center;
+.single-story-container {
+  min-width: 320px; }
+  .single-story-container .entry-header {
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    position: relative;
     font-family: "Titillium Web", sans-serif;
-    text-transform: uppercase;
-    font-size: 21px;
-    font-weight: 400;
-    color: #F9AC31;
-    padding: 0 10vw; }
-    .single-story-container .story-content h2::last-word {
-      font-weight: bold; }
-  .single-story-container .story-content p {
-    margin: 5vw 10vw;
-    font-weight: 300; }
+    text-transform: uppercase; }
+    .single-story-container .entry-header h2 {
+      font-size: 21px;
+      position: absolute;
+      top: 2vh;
+      left: 5vw;
+      font-weight: 400; }
+    .single-story-container .entry-header h1.entry-title {
+      width: 100%;
+      text-align: center;
+      font-size: 21px;
+      position: absolute;
+      top: 70vh;
+      font-weight: 400;
+      background: rgba(255, 255, 255, 0.8); }
+    .single-story-container .entry-header .img-container {
+      overflow: hidden;
+      height: 100%;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: center;
+          justify-content: center;
+      -ms-flex-align: center;
+          align-items: center; }
+      .single-story-container .entry-header .img-container img {
+        min-height: 100%;
+        max-width: none; }
+  .single-story-container .story-content {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap; }
+    .single-story-container .story-content h2.story-number {
+      border: solid 2px #F9AC31;
+      border-width: 2px 0;
+      text-align: center;
+      font-family: "Titillium Web", sans-serif;
+      text-transform: uppercase;
+      font-size: 21px;
+      font-weight: 400;
+      color: #F9AC31;
+      padding: 0 10vw; }
+    .single-story-container .story-content p {
+      margin: 5vw 10vw;
+      font-weight: 300; }
+    .single-story-container .story-content .practice-block {
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: center;
+          justify-content: center;
+      -ms-flex-align: center;
+          align-items: center;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap; }
+      .single-story-container .story-content .practice-block h2.practice-title {
+        border: solid 2px #F9AC31;
+        border-width: 2px 0;
+        text-align: center;
+        font-family: "Titillium Web", sans-serif;
+        text-transform: uppercase;
+        font-size: 21px;
+        font-weight: 400;
+        color: #F9AC31;
+        padding: 0 10vw; }
 
 /* ----------------- Top Section - Banner -------------*/
 .bix-book-banner {
