--- a/themes/bix/sass/_variables.scss
+++ b/themes/bix/sass/_variables.scss
@@ -33,6 +33,7 @@ $font-size__header: 36px;
 
 //media queries
 $tablet: "(min-width: 600px)";
+$tablet-medium: "(min-width: 700px)";
 $tablet-large: "(min-width: 900px)";
 $desktop: "(min-width: 1024px)";
 $desktop-large: "(min-width: 1260px)";
