--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -70,6 +70,7 @@
 			justify-content: center;
 			align-items: center;
 			flex-flow: column nowrap;
+			text-align: center;
 
 			h2.practice-title{
 				border: solid 2px $color__orange;
@@ -81,6 +82,12 @@
 				font-weight: 400;
 				color: $color__orange;
 				padding: 0 10vw;
+			}
+
+			hr {
+				border: solid $color__orange 1px;
+				width: 50vw;
+				background: $color__orange;
 			}
 		}
 	}
