--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -67,6 +67,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "page-templates";
 @import "about";
 @import "front-page";
+@import "single-story";
 @import "bix-book";
 @import "stories";
 @import "footer";
