--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1886,7 +1886,15 @@ strong {
     font-weight: 300; }
 
 .ribbon, .ribbon-heading {
-  display: none; }
+  display: none;
+  padding: 100px 0; }
+  .ribbon .book-section1-inside, .ribbon-heading .book-section1-inside {
+    padding: 5px 20px;
+    background-color: rgba(230, 230, 230, 0.7);
+    display: block;
+    max-width: 100%; }
+    .ribbon .book-section1-inside p, .ribbon-heading .book-section1-inside p {
+      font-weight: 300; }
 
 /* ----------------- Section 2 - Carousel -------------*/
 .main-carousel {
@@ -1967,7 +1975,8 @@ strong {
       flex-direction: column;
   -ms-flex-pack: center;
       justify-content: center;
-
+  -ms-flex-align: center;
+      align-items: center;
   padding: 25px 0;
   margin-top: 0; }
   .book-purchase .book-purchase-info {
@@ -1976,11 +1985,6 @@ strong {
     max-width: 100%; }
     .book-purchase .book-purchase-info div p {
       text-align: left; }
-    max-width: 100%;
-    /*====================================
-		  Our Modal Window styles
-		=====================================*/ }
-   fix download modal for bixbook page
     .book-purchase .book-purchase-info p {
       font-weight: 300;
       display: block;
@@ -2008,6 +2012,8 @@ strong {
       -ms-flex-direction: column;
           flex-direction: column;
       -ms-flex-pack: center;
+          justify-content: center;
+      -ms-flex-align: center;
           align-items: center; }
       .book-purchase .book-purchase-info .donate-now .book-buy-light {
         margin-bottom: 0;
@@ -2024,10 +2030,102 @@ strong {
       display: block;
       text-align: center;
       width: 230px; }
-
     .book-purchase .book-purchase-info .book-or {
       font-weight: bold;
       margin-bottom: 0; }
+
+/*====================================
+		  Our Modal Window styles
+		=====================================*/
+.modal {
+  display: block;
+  background: #fff;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
+  display: inline-block;
+  padding: 1em; }
+
+@media (min-width: 43.75em) {
+  .modal {
+    padding: 1.5em; } }
+
+.modal > label {
+  background: #FFD300;
+  border: 1px solid #f0c600;
+  border-radius: .2em;
+  color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: bold;
+  padding: 0.75em 1.5em;
+  text-shadow: 1px 1px 1px #fff;
+  transition: all 0.55s; }
+
+.modal > label:hover {
+  transform: scale(0.97); }
+
+.modal__overlay {
+  background: #000000;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  text-align: center;
+  text-shadow: none;
+  top: 0;
+  z-index: 600; }
+
+.modal__wrap {
+  padding: 1em 0;
+  position: relative;
+  margin: 0 auto;
+  max-width: 500px;
+  width: 90%; }
+
+@media (min-width: 50em) {
+  .modal__wrap {
+    padding: 1.75em; } }
+
+@media (min-height: 37.5em) {
+  .modal__wrap {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -80%); } }
+
+.modal__wrap label {
+  background: #FFD300;
+  border-radius: 50%;
+  color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  height: 1.5em;
+  line-height: 1.5;
+  position: absolute;
+  right: .5em;
+  top: .5em;
+  width: 1.5em; }
+
+.modal__wrap h2 {
+  color: #FFD300;
+  margin-bottom: 1em;
+  text-transform: uppercase; }
+
+.modal__wrap p {
+  color: #FFD300;
+  text-align: justify; }
+
+.modal input:focus ~ label {
+  transform: scale(0.97); }
+
+.modal input {
+  position: absolute;
+  top: -1000px; }
+
+.modal__overlay {
+  opacity: 0;
+  transform: scale(0.5);
+  transition: all 0.75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  z-index: -100; }
 
 @media (min-width: 600px) {
   .bix-book-banner {
@@ -2152,6 +2250,10 @@ strong {
     height: 25px; }
   .main-carousel .flickity-prev-next-button {
     display: none; }
+  .modal input:checked ~ .modal__overlay {
+    opacity: 1;
+    transform: scale(1);
+    z-index: 800; }
   .book-section3 {
     max-width: 100vw; }
     .book-section3 .the-bix-book-title {
@@ -2274,89 +2376,62 @@ strong {
   .stories-main .stories-title a {
     text-decoration: none;
     color: #fff;
-<<<<<<< a64b62e7a6afb2d125cc44ebb56803048d59d0e2
-    font-weight: 500; }
-=======
-    .book-purchase .book-purchase-info .modal {
-      display: block;
-      background: #fff;
-      box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
-      display: inline-block;
-      padding: 1em; }
-    @media (min-width: 43.75em) {
-      .book-purchase .book-purchase-info .modal {
-        padding: 1.5em; } }
-    .book-purchase .book-purchase-info .modal > label {
-      background: #FFD300;
-      border: 1px solid #f0c600;
-      border-radius: .2em;
-      color: #000000;
-      cursor: pointer;
-      display: inline-block;
-      font-weight: bold;
-      padding: 0.75em 1.5em;
-      text-shadow: 1px 1px 1px #fff;
-      transition: all 0.55s; }
-    .book-purchase .book-purchase-info .modal > label:hover {
-      transform: scale(0.97); }
-    .book-purchase .book-purchase-info .modal__overlay {
-      background: #000000;
-      bottom: 0;
-      left: 0;
-      position: fixed;
-      right: 0;
-      text-align: center;
-      text-shadow: none;
-      top: 0;
-      z-index: 600; }
-    .book-purchase .book-purchase-info .modal__wrap {
-      padding: 1em 0;
-      position: relative;
-      margin: 0 auto;
-      max-width: 500px;
-      width: 90%; }
-    @media (min-width: 50em) {
-      .book-purchase .book-purchase-info .modal__wrap {
-        padding: 1.75em; } }
-    @media (min-height: 37.5em) {
-      .book-purchase .book-purchase-info .modal__wrap {
-        left: 50%;
-        position: absolute;
-        top: 50%;
-        transform: translate(-50%, -80%); } }
-    .book-purchase .book-purchase-info .modal__wrap label {
-      background: #FFD300;
-      border-radius: 50%;
-      color: #000000;
-      cursor: pointer;
-      display: inline-block;
-      height: 1.5em;
-      line-height: 1.5;
-      position: absolute;
-      right: .5em;
-      top: .5em;
-      width: 1.5em; }
-    .book-purchase .book-purchase-info .modal__wrap h2 {
-      color: #FFD300;
-      margin-bottom: 1em;
-      text-transform: uppercase; }
-    .book-purchase .book-purchase-info .modal__wrap p {
-      color: #FFD300;
-      text-align: justify; }
-    .book-purchase .book-purchase-info .modal input:focus ~ label {
-      transform: scale(0.97); }
-    .book-purchase .book-purchase-info .modal input {
-      position: absolute;
-      top: -1000px; }
-    .book-purchase .book-purchase-info .modal__overlay {
-      opacity: 0;
-      transform: scale(0.5);
-      transition: all 0.75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-      z-index: -100; }
-    .book-purchase .book-purchase-info .modal input:checked ~ .modal__overlay {
-      opacity: 1;
-      transform: scale(1);
-      z-index: 800; }
+    font-weight: 500;
+    text-transform: uppercase; }
+
+@media (min-width: 600px) {
+  .stories-article {
+    margin-bottom: 50px;
+    max-width: 100%; }
+  .stories-main .entry-content .btn-stories {
+    width: 250px; } }
+
+@media (min-width: 700px) {
+  .stories-banner .stories-title {
+    font-size: 1.5rem; }
+  /* ----------------- Stories Section -------------*/
+  .stories-main {
+    max-width: 80%;
+    margin: 0 auto; } }
+
+@media (min-width: 900px) {
+  .stories-banner {
+    background: url(../../images/teaser-stories-banner.png) no-repeat center left;
+    background-size: cover;
+    height: 70vh;
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 50px; }
+    .stories-banner .site-logo {
+      display: unset;
+      max-width: 250px; }
+    .stories-banner .stories-title {
+      color: #fff;
+      border-bottom: solid 2px #fff;
+      border-top: solid 2px #fff;
+      font-size: 1.5rem;
+      padding: 10px 0;
+      width: 250px;
+      text-transform: capitalize;
+      font-weight: 500; }
+      .stories-banner .stories-title:after {
+        content: " Stories"; }
+    .stories-banner .stories-subtitle {
+      color: #fff; }
+  .stories-main .entry-content {
+    opacity: 0; }
+    .stories-main .entry-content .btn-stories {
+      opacity: 0; }
+  .stories-main:hover .entry-content {
+    opacity: 1; }
+    .stories-main:hover .entry-content .btn {
+      opacity: 1; }
+  .entry-content .stories-title {
+    font-size: 2rem; } }
+
+@media (min-width: 1024px) {
+  .stories-main {
+    max-width: 70%; } }
 
 .footer-content-area {
   background-color: #444444;
@@ -2447,8 +2522,6 @@ strong {
   Our Modal Window styles
 =====================================*/
 .modal {
-  background: #fff;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
   display: inline-block;
   padding: 1em; }
 
@@ -2496,7 +2569,6 @@ strong {
 @media (min-height: 37.5em) {
   .modal__wrap {
     left: 50%;
-    position: absolute;
     top: 50%;
     transform: translate(-50%, -80%); } }
 
@@ -2508,7 +2580,6 @@ strong {
   display: inline-block;
   height: 1.5em;
   line-height: 1.5;
-  position: absolute;
   right: .5em;
   top: .5em;
   width: 1.5em; }
@@ -2521,19 +2592,9 @@ strong {
 .modal__wrap p {
   color: #FFD300;
   text-align: justify; }
-.modal input:focus ~ label {
-  transform: scale(0.97); }
 
-.modal input {
-  position: absolute;
-  top: -1000px; }
 .modal__overlay {
   opacity: 0;
   transform: scale(0.5);
   transition: all 0.75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   z-index: -100; }
-
-.modal input:checked ~ .modal__overlay {
-  opacity: 1;
-  transform: scale(1);
-  z-index: 800; }
